canvas: fix gaps between pixels when zooming and moving the stage
we also set the zoomed image rendering to pixelated.

--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,9 @@ html, body {
 	font-family: Ubuntu, Helvetica, Arial, sans-serif;
 	color: #222;
 }
+canvas {
+	image-rendering: pixelated;
+}
 .menu {
 	display: flex;
 	align-items: baseline;
